[tool.poetry]
name = "dev-containers"
version = "0.1.0"
description = "Test project for ne4j"
authors = ["PIOTR MIKLER <piotr.mikler1997@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "dev_containers"}]

[tool.poetry.dependencies]
python = "^3.9"
neo4j = "^5.14.1"
pandas = "^2.1.3"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
